tests/compile/no_reference.stderr
error[E0271]: type mismatch resolving `<SomeTable as Table>::Referer == ()`
  --> tests/compile/no_reference.rs:10:21
   |
 3 | #[schema(Schema)]
   | ----------------- required by a bound introduced by this call
...
10 |         pub marker: rust_query::TableRow<SomeTable>,
   |                     ^^^^^^^^^^ type mismatch resolving `<SomeTable as Table>::Referer == ()`
   |
note: expected this to be `()`
  --> tests/compile/no_reference.rs:3:1
   |
 3 | #[schema(Schema)]
   | ^^^^^^^^^^^^^^^^^
   = note: required for `TableRow<SomeTable>` to implement `SchemaType<v0::Schema>`
note: required by a bound in `TypBuilder::<S>::col`
  --> src/schema/from_macro.rs
   |
   |     pub fn col<T: SchemaType<S>>(&mut self, name: &'static str, span: (usize, usize)) {
   |                   ^^^^^^^^^^^^^ required by this bound in `TypBuilder::<S>::col`
   = note: this error originates in the attribute macro `schema` (in Nightly builds, run with -Z macro-backtrace for more info)
